# djangochannelsrestframework

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  setup.cfg
djangochannelsrestframework/: consumers.py
