[tool.poetry]
name = "djangochannelsrestframework"
version = "0.1.0"
description = "Django Channels Rest Framework provides a DRF like interface for building channels-v3 websocket consumers."
authors = ["Your Name <you@example.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=2.2"
djangorestframework = ">=3.12.4"
channels = ">=3.0.3"


[tool.poetry.group.dev.dependencies]
black = ">=22.3.0"
pytest = ">=6.2.5"
pytest-asyncio = "^0.21.0"
pytest-django = "^4.5.2"
sphinx = ">=4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
